# rinha-de-backend-2026

./: .gitignore  Cargo.toml  LICENSE  README.md  docker-compose.yml  info.json
.cargo/: config.toml
.github/workflows/: bench.yml  ci.yml  release.yml
bench/: run-local.sh
crates/api/: Cargo.toml  build.rs
crates/api/src/: dataset.rs  knn.rs  main.rs  responses.rs  vectorize.rs
crates/api/tests/: integration.rs
crates/prep/: Cargo.toml
crates/prep/src/: kmeans.rs  main.rs
docker/: Dockerfile  nginx.conf
participants-snippet/: lucasraziel.json
scripts/: fetch-resources.sh  make-submission.sh
