[package]
name = "api"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "api"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", default-features = false, features = ["macros", "net", "rt", "signal", "io-util", "time"] }
hyper = { version = "1", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["tokio", "server", "service", "http1"] }
http-body-util = "0.1"
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"
half = "2"
mimalloc = { version = "0.1", default-features = false }

[build-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
